--- a/aqua.yaml
+++ b/aqua.yaml
@@ -15,4 +15,5 @@ packages:
   - name: suzuki-shunsuke/pinact@v2.0.0
   - name: bitwarden/clients@cli-v2025.4.0
   - name: mongodb/mongodb-atlas-cli/atlascli@atlascli/v1.42.2
+  - name: openai/codex@rust-v0.33.0
   - import: aqua/wash.yaml
