--- a/renovate.json5
+++ b/renovate.json5
@@ -3,7 +3,7 @@
     'github>suzuki-shunsuke/renovate-config:nolimit#3.1.0',
     'github>suzuki-shunsuke/renovate-config#3.1.0',
   ],
-  "packageRules": [
+  "customManagers": [
       {
          "customType": "regex",
          "datasourceTemplate": "github-releases",
