--- a/aqua.yaml
+++ b/aqua.yaml
@@ -11,9 +11,5 @@ registries:
   - type: standard
     ref: v4.411.1 # renovate: depName=aquaproj/aqua-registry
 packages:
-  - name: wasmCloud/wasmCloud/wash@wash-v0.41.0
   - name: suzuki-shunsuke/pinact@v2.0.0
-  - name: bitwarden/clients@cli-v2025.4.0
-  - name: mongodb/mongodb-atlas-cli/atlascli@atlascli/v1.42.2
-  - name: openai/codex@rust-v0.33.0
-  - import: aqua/wash.yaml
+  - name: hashicorp/terraform@v1.0.0
