--- a/renovate.json5
+++ b/renovate.json5
@@ -5,4 +5,9 @@
     'github>aquaproj/aqua-renovate-config#2.9.0',
     "github>aquaproj/aqua-renovate-config:file#2.9.0(aqua/.*\\.ya?ml)",
   ],
+  prBodyNotes: [
+    // https://docs.renovatebot.com/configuration-options/#prbodynotes
+    // https://docs.renovatebot.com/templates/
+    '<!-- metadata {"categories": {{stringToPrettyJSON categories}}} -->',
+  ],
 }
