--- a/renovate.json5
+++ b/renovate.json5
@@ -1,13 +1,8 @@
 {
   "extends": [
+    "config:best-practices",
     'github>suzuki-shunsuke/renovate-config:nolimit#3.1.0',
-    'github>suzuki-shunsuke/renovate-config#3.1.0',
     'github>aquaproj/aqua-renovate-config#2.9.0',
     "github>aquaproj/aqua-renovate-config:file#2.9.0(aqua/.*\\.ya?ml)",
-  ],
-  prBodyNotes: [
-    // https://docs.renovatebot.com/configuration-options/#prbodynotes
-    // https://docs.renovatebot.com/templates/
-    '<!-- metadata { "categories": {{{toJSON categories}}} } -->',
   ],
 }
